tests/js_error/parser/import_attribute_duplicate_keys_module.exp
SyntaxError: Import attribute with that key already exists
  ┌ tests/js_error/parser/import_attribute_duplicate_keys_module.js:1:37
  |
1 | import "foo" with { key1: "value1", "key1": "value2" };
  |                                     ^